Slider Link Update
Added logic so title text is linked if applicable
Added css to keep the colors white on title links.

--- a/css/block/slider.css
+++ b/css/block/slider.css
@@ -43,6 +43,14 @@
   color: white;
 }
 
+a.slide-title-link {
+  color: white;
+}
+
+a.slide-title-link:hover {
+  color: white;
+}
+
 .ucb-slider-block .carousel-caption {
   padding: 1em;
 }
