--- a/css/ucb-discovery-view.css
+++ b/css/ucb-discovery-view.css
@@ -1,10 +1,11 @@
 .ucb-discover-card-container {
   border-bottom: 1px solid rgba(128, 128, 128, 0.333);
   margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .ucb-discover-card-share-section{
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
