--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -27,25 +27,35 @@
           <a href="{{ full_url }}" aria-hidden="true">Read more</a>
         </span>
 
-        <div class="ucb-card-metrics text-muted mt-1" style="font-size: 0.9em;">
+      <div class="ucb-card-metrics text-muted mt-1" style="font-size: 0.9em;">
         <span class="me-3">
           <i class="fa fa-eye" aria-hidden="true"></i>
           {{ fields.total_views.content }}
         </span>
-        <span>
+        <span class="me-3">
           <i class="fa fa-sitemap" aria-hidden="true"></i>
           {{ fields.consumer_site_count.content }}
         </span>
-      </div>
-
-      </div>
-    </div>
-
-    {# Share button outside row if full-width #}
+        {% if fields.content_authority is defined %}
+        <span class="me-3">
+          <a class="ucb-discover-source" target="_blank" href="{{fields.source_site.content}}">
+            <i class="fas fa-university"></i> 
+            {{ fields.content_authority.content }}
+          </a>
+        </span>
+          {# <p class="ucb-discover-source"></p> #}
+        {% endif %}
+            {# Share button outside row if full-width #}
     <trusted-share-button {{ create_attribute({
       'base-uri' : fields.source_site.content,
       'nid' : fields.remote_nid.content,
       'node-type' : fields.remote_type.content
     }) }}></trusted-share-button>
+      </div>
+      </div>
+    </div>
+      <div>
+
+      </div>
   </div>
 </article>
