Fixes View duplication due to unneeded relationship to Telemetry

--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -30,11 +30,11 @@
       <div class="ucb-card-metrics text-muted mt-1" style="font-size: 0.9em;">
         <span class="me-3">
           <i class="fa fa-eye" aria-hidden="true"></i>
-          {{ fields.total_views.content }}
+          {{ fields.syndication_total_views.content }}
         </span>
         <span class="me-3">
           <i class="fa fa-sitemap" aria-hidden="true"></i>
-          {{ fields.consumer_site_count.content }}
+          {{ fields.syndication_consumer_sites.content }}
         </span>
         {% if fields.content_authority is defined %}
         <span class="me-3">
