--- a/css/block/ucb-trusted-content-block.css
+++ b/css/block/ucb-trusted-content-block.css
@@ -1,21 +1,6 @@
-.ucb-article-list-block{
+.ucb-article-list-block {
   padding: 0;
 }
-
-.ucb-article-list-block-button-container {
-  text-align: right;
-}
-
-.ucb-article-list-block-button {
-  font-weight: normal;
-  margin: 0;
-}
-
-/* .ucb-article-list-block-button:hover{
-  transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
-  background-color: #0277BD;
-  color: white !important;
-} */
 
 .ucb-article-card {
   margin-bottom: 20px;
@@ -32,17 +17,16 @@
 .ucb-article-card-img {
   width: 100px;
   height: 100px;
-  padding: 0px;
+  padding: 0;
 }
 
 .ucb-article-card-img.title-thumbnail-img {
   width: 65px;
   height: 65px;
-  padding: 0px;
+  padding: 0;
 }
 
 .ucb-article-card-img-wide {
-  /* height: 500px !important; */
   object-fit: cover !important;
   margin-bottom: 10px;
   width: 100%;
@@ -51,7 +35,6 @@
 .ucb-article-card-img-full {
   width: 100% !important;
   margin-bottom: 10px;
-
 }
 
 .ucb-article-card-date {
@@ -67,7 +50,7 @@
 }
 
 .ucb-article-card-summary {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .ucb-article-card-title {
@@ -77,22 +60,21 @@
   line-height: 1.3;
 }
 
-.ucb-article-card-title-no-date{
+.ucb-article-card-title-no-date {
   margin-bottom: 12px;
 }
 
 .ucb-article-card-title-feature {
-    font-size: 130%;
-    font-weight: bolder;
-    margin: 0 0 10px 0;
-    line-height: 1.3;
+  font-size: 130%;
+  font-weight: bolder;
+  margin: 0 0 10px 0;
+  line-height: 1.3;
 }
 
-.ucb-article-card-title-teaser{
+.ucb-article-card-title-teaser {
   display: block;
 }
 
-/* Used for the Syndicated Share Block */
 .ucb-article-card-feature {
   display: flex;
   flex-direction: column-reverse;
@@ -107,12 +89,12 @@
   .ucb-article-card-img {
     width: 50px;
     height: 50px;
-    padding: 0px;
+    padding: 0;
   }
 
   .ucb-article-card-img.title-thumbnail-img {
     width: 50px;
     height: 50px;
-    padding: 0px;
+    padding: 0;
   }
 }
