Newsletter: Adjust spacing between elements, remove left padding from elements

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -482,6 +482,11 @@
                 list-style: none;
             }
 
+            .email-feature-art-row table,
+            .email-teaser-art-row table {
+              padding-bottom: 10px;
+            }
+
             .icon-label{
                 display: none;
             }
@@ -555,7 +560,7 @@
                                 </tr>
                             {% else %}
                                 <tr>
-                                  <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 20px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 20px; padding-left:10px; text-align:left">
+                                  <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 20px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 20px; padding:10px; text-align:left">
                                     <span>{{node.field_newsletter_type.entity.label}}</span>
                                   </td>
                                 </tr>
