--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -8,9 +8,6 @@
  * See: https://www.w3schools.com/html/html_tables.asp
 #}
 
-
-{% set base_url = url('<front>')|render|split('/', -1)|join('/') %}
-
 {# Needed for Multisite #}
 {# Get the full base URL #}
 {% set full_base_url = url('<front>')|render %}
@@ -26,7 +23,7 @@
 	<table role="presentation"  border="0" width="600" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
 		<tbody>
 			<tr>
-				<td align="center" style="font-size:20px;text-align: left; padding-right:10px; padding-left:10px;padding-top:20px; padding-bottom:20px;">
+				<td align="center" style="font-size:20px;text-align: left; padding: 10px; padding-left:0px;">
 					<h2>{{ content.field_newsletter_section_title|render }}</h2>
 				</td>
 			</tr>
@@ -47,11 +44,11 @@
                 <tr>
                   <td bgcolor="white" style="mso-background-alt: white !important">
           <![endif]-->
-					<table role="presentation"  width="600" style="padding-bottom: 20px;">
+					<table role="presentation"  width="600" style="padding-bottom: 10px;">
 						<tbody>
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:10px">
                   <a href="{{ url('entity.node.canonical', {
                     'node': item.entity.field_newsletter_article_select.target_id
                   }, {'absolute': true}) }}">
@@ -65,7 +62,7 @@
 								</td>
 									{# Code to render selected article content (!thumbnail) #}
 								{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:10px">
                   <a href="{{ url('entity.node.canonical', {
                     'node': item.entity.field_newsletter_article_select.target_id
                   }, {'absolute': true}) }}">
@@ -79,7 +76,7 @@
 								</td>
 									{# Code to render user made content #}
 								{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px;">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:10px;">
                   <img
                   src="{{ base_domain }}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri | image_style('focal_image_wide') }}"
                   width="600"
@@ -186,7 +183,7 @@
                 <tr>
                   <td bgcolor="white" style="mso-background-alt: white !important">
           <![endif]-->
-						<table role="presentation" width="600" style="padding-top:20px; padding-bottom: 20px; border-bottom: solid 1px #cccccc;">
+						<table role="presentation" width="600" style="padding-top:10px; padding-bottom: 10px; border-bottom: solid 1px #cccccc;">
 							<tbody>
 								<tr class="email-feature-art-row">
 									{# Image #}
@@ -220,14 +217,14 @@
 									</td>
                   {% endif %}
 									{# Header, Summary, Cats #}
-									<td width="72%">
+									<td style="padding-left:0px;" width="72%">
 										<table role="presentation">
 											<tbody>
 												{# Header #}
 												<tr>
 													{# Code to render selected article title/url #}
 													{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
-													<td>
+													<td style="padding-left:0px;">
 														<h3 style="font-size: 18px;">
                               <a style="text-decoration: none;"
                               href="{{ url('entity.node.canonical', {
@@ -239,7 +236,7 @@
 													</td>
 
 													{# Code to render user made content (title) #}
-												{% elseif item.entity.field_newsletter_content_title.value|render or item.entity.field_newsletter_content_text.value|render %}
+												{% elseif item.entity.field_newsletter_content_title.value or item.entity.field_newsletter_content_text.value|render %}
 													{% if item.entity.field_newsletter_content_url.0.url %}
 														{% set actual_url = item.entity.field_newsletter_content_url.0.url.toString() %}
 														{% set is_absolute = (actual_url starts with 'http://' or actual_url starts with 'https://') %}
@@ -250,11 +247,13 @@
 															</a>
 														</h3>
 													{% else %}
-												<td>
+													{% if item.entity.field_newsletter_content_title.value %}
+												<td style="padding-left:0px; padding-top: 0px;">
 													<h3 style="font-size: 18px;">
 														{{ item.entity.field_newsletter_content_title|view }}
 													</h3>
 												</td>
+												{% endif %}
 													{% endif %}
 												{% endif %}
 												</tr>
@@ -271,7 +270,7 @@
 								{# Code to render selected article content (summary) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
 								<tr>
-									<td>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}</td>
+									<td style="padding-left:0px;">{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}</td>
 								</tr>
 
 								{# Code to render selected article content (article text) #}
@@ -290,7 +289,7 @@
 								{# Code to render user made content (content text) #}
 							{% elseif item.entity.field_newsletter_content_text.value|render %}
 								<tr>
-									<td>{{ item.entity.field_newsletter_content_text|view }}</td>
+									<td style="padding-left:0px;">{{ item.entity.field_newsletter_content_text|view }}</td>
 								</tr>
 							{% endif %}
 											</tbody>
@@ -320,7 +319,7 @@
 		<table>
 			<tbody>
 				<tr>
-					<td class='article-link' align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+					<td class='article-link' align="center" style="text-align: left; padding-right:10px; padding-left:0px;">
 						{{ content.field_newsletter_section_link }}
 					</td>
 				</tr>
