--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -227,7 +227,7 @@
   {# MAIN PAGE CONTENT #}
   <div{{ create_attribute({ class: ['ucb-page-content', ucb_heading_font == 'normal' ? 'ucb-heading-font-normal'] }) }}>
     {% block breadcrumb_region %}
-      {% if show_breadcrumb and page.breadcrumb is not empty %}
+      {% if show_breadcrumb and page.breadcrumb|render|striptags|trim|length > 0 %}
         <div class="ucb-breadcrumb-region">
           {{ page.breadcrumb }}
         </div>
